[package]
name = "ic-turso-bindings"
version = "0.0.1"
edition = "2021"

[features]
default = []
experimental_indexes = []
antithesis = ["turso_core/antithesis"]

[dependencies]
ic-cdk = "0.18.5"
ic-stable-structures = "0.7.0"
getrandom = { version = "0.2.16", features = ["custom"] }
turso_core = { git = "https://github.com/kristoferlund/ic-turso", branch = "patches", package = "turso_core", default-features = false }
turso_sqlite3_parser = { git = "https://github.com/kristoferlund/ic-turso", branch = "patches", package = "turso_sqlite3_parser", default-features = false }
thiserror = "2.0.9"
tracing = "0.1.41"
